--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "NodeNext",  
-    "moduleResolution": "nodenext", 
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
     "resolveJsonModule": true,
-    "allowImportingTsExtensions": true, 
-    "noEmit": true,  
+    "allowSyntheticDefaultImports": true,
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"]
