--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "node --import tsx src/server.ts",
+    "dev": "npx tsx src/server.ts",
     "dev:legacy": "node --loader ts-node/esm src/server.ts",
     "start": "node dist/server.js"
   },
@@ -44,6 +44,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "zod": "^3.24.4"
   }
 }
