--- a/Server/package.json
+++ b/Server/package.json
@@ -41,11 +41,13 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
+    "inversify": "^7.10.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "nodemon": "^3.1.10",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "reflect-metadata": "^0.2.2",
     "zod": "^3.24.4"
   }
 }
