--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -8,7 +8,9 @@
     "strict": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "./dist"
+     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "outDir": "./dist",
   },
   "include": ["src/**/*.ts"]
 }
