--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev": "npx tsx src/server.ts",
+    "dev": "npx tsx watch src/server.ts",
     "dev:legacy": "node --loader ts-node/esm src/server.ts",
     "start": "node dist/server.js"
   },
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -47,7 +48,8 @@
     "nodemon": "^3.1.10",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
-    "zod": "^3.24.4"
+    "zod": "^3.25.76"
   }
 }
