--- a/Server/package.json
+++ b/Server/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "http": "^0.0.1-security",
     "inversify": "^7.10.4",
     "jsonwebtoken": "^9.0.2",
@@ -48,6 +49,7 @@
     "nodemon": "^3.1.10",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
+    "rate-limit-redis": "^4.2.3",
     "redis": "^5.9.0",
     "reflect-metadata": "^0.2.2",
     "zod": "^3.25.76"
