--- a/Server/.env.example
+++ b/Server/.env.example
@@ -1,1 +1,9 @@
 PORT=5000
+NODE_ENV=development
+
+REFRESH_TOKEN_SECRET=your_generated_jwt_secret_here
+ACCESS_TOKEN_SECRET=your_generated_access_token_secret_here
+
+DB_URL=db_url
+
+REDIS_URL=rediss_url
