feat(auth): implement password reset and email service
- Add forgot password and reset password functionality with email verification
- Create EmailService using nodemailer for sending password reset emails
- Update auth routes and controller to handle new password reset endpoints
- Add token expiry configurations in .env.example
- Include new dependencies for email functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,4 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#253209",
-        "titleBar.activeBackground": "#33460C",
-        "titleBar.activeForeground": "#F8FCEF"
-    }
+  "workbench.colorTheme": "Dark Magic Night",
+  "workbench.preferredDarkColorTheme": "Dark Magic"
 }
