--- a/Server/.env.example
+++ b/Server/.env.example
@@ -1,8 +1,13 @@
 PORT=5000
 NODE_ENV=development
 
-REFRESH_TOKEN_SECRET=your_generated_jwt_secret_here
-ACCESS_TOKEN_SECRET=your_generated_access_token_secret_here
+EMAIL_TOKEN_EXPIRY= "10m"
+ACCESS_TOKEN_EXPIRY= "5m"
+REFRESH_TOKEN_EXPIRY= "30d"
+
+REFRESH_TOKEN_SECRET="your_generated_jwt_secret_here"
+EMAIL_TOKEN_SECRET="your_generated_email_token_secret_here"
+ACCESS_TOKEN_SECRET="your_generated_access_token_secret_here"
 
 DB_URL=db_url
 
