--- a/Server/package.json
+++ b/Server/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.15.17",
+    "@types/nodemailer": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "eslint": "^9.39.1",
@@ -46,6 +47,7 @@
     "inversify": "^7.10.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
