refactor: Clean up Redis rate limiting and MongoDB repository
- Remove redundant or unnecessary code
- Improve reliability and maintainability of existing Redis-based rate limiting
- Refactor MongoDB base repository setup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "workbench.sideBar.location": "right",
   "workbench.colorTheme": "Dark Magic Night",
-  "workbench.preferredDarkColorTheme": "Dark Magic"
+  "editor.fontFamily": "'Fira Code', Consolas, 'Courier New', monospace",
+  "editor.fontLigatures": true
 }
